--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,20 +13,22 @@
   --ifm-color-primary-light: hsl(325, 75%, 80%);
   --ifm-color-primary-lighter: hsl(325, 75%, 85%);
   --ifm-color-primary-lightest: hsl(325, 75%, 90%);
+  --ifm-hero-background-color: hsl(0, 0%, 95%);
+  --ifm-hero-text-color: var(--ifm-heading-color);
+  --ifm-footer-color: var(--ifm-hero-text-color);
+  --ifm-footer-link-color: var(--ifm-hero-text-color);
+  --ifm-footer-background-color: var(--ifm-hero-background-color);
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 /* Currently, the pink theme is light enough */
-/* [data-theme='dark'] {
-  --ifm-color-primary: hsl(167, 70%, 45%);
-  --ifm-color-primary-dark: hsl(167, 70%, 41%);
-  --ifm-color-primary-darker: hsl(167, 70%, 38%);
-  --ifm-color-primary-darkest: hsl(167, 70%, 32%);
-  --ifm-color-primary-light: hsl(167, 70%, 50%);
-  --ifm-color-primary-lighter: hsl(167, 70%, 52%);
-  --ifm-color-primary-lightest: hsl(167, 70%, 59%);
-} */
+[data-theme='dark'] {
+  --ifm-color-primary: hsl(325, 75%, 75%);
+  --ifm-hero-background-color: hsl(0, 0%, 13%);
+  --ifm-background-color: hsl(0%, 0%, 0%);
+  --ifm-navbar-background-color: var(--ifm-background-color);
+}
 
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
