--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,27 +4,30 @@
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. */
+/* You can override the default Infima variables here. hsl(325, 75%, 75%);; */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: hsl(325, 75%, 75%);
+  --ifm-color-primary-dark: hsl(325, 75%, 50%);
+  --ifm-color-primary-darker: hsl(325, 75%, 40%);
+  --ifm-color-primary-darkest: hsl(325, 75%, 30%);
+  --ifm-color-primary-light: hsl(325, 75%, 80%);
+  --ifm-color-primary-lighter: hsl(325, 75%, 85%);
+  --ifm-color-primary-lightest: hsl(325, 75%, 90%);
+  --ifm-hero-background-color: hsl(0, 0%, 95%);
+  --ifm-hero-text-color: var(--ifm-heading-color);
+  --ifm-footer-color: var(--ifm-hero-text-color);
+  --ifm-footer-link-color: var(--ifm-hero-text-color);
+  --ifm-footer-background-color: var(--ifm-hero-background-color);
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
+/* Currently, the pink theme is light enough */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: hsl(325, 75%, 75%);
+  --ifm-hero-background-color: hsl(0, 0%, 13%);
+  --ifm-background-color: hsl(0%, 0%, 0%);
+  --ifm-navbar-background-color: var(--ifm-background-color);
 }
 
 .docusaurus-highlight-code-line {
