--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,7 +4,7 @@
  * work well for content-centric websites.
  */
 
-/* You can override the default Infima variables here. hsl(325, 75%, 75%);; */
+/* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: hsl(325, 75%, 75%);
   --ifm-color-primary-dark: hsl(325, 75%, 50%);
@@ -28,6 +28,7 @@
   --ifm-hero-background-color: hsl(0, 0%, 13%);
   --ifm-background-color: hsl(0%, 0%, 0%);
   --ifm-navbar-background-color: var(--ifm-background-color);
+  --ifm-navbar-shadow: var(--ifm-toc-border-color) 0 1px 2px 0;
 }
 
 .docusaurus-highlight-code-line {
