--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,8 +20,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 2rem;
 }
 
 p {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0rem;
 }
